sfdx-source/force-app/main/default/objects/WorkPlanTemplateEntry/WorkPlanTemplateEntry.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>