sfdx-source/force-app/main/default/objects/WorkPlanTemplateEntry/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BZAP-19551</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>