sfdx-source/force-app/main/default/objects/WorkPlanTemplateEntry/fields/Work_Step_Default_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Step_Default_Status__c</fullName>
    <description>LEM-1142: It indicates default Status assigned to WorkStep on creation.</description>
    <label>Work Step Default Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>